<resources>
    <string name="app_name">FIND SSB</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>
    <string name="pesgunta1">Localizar Supermercado</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="conta">Conta</string>
    <string name="supermercado">Supermercado</string>
    <string name="supermercadon">Supermercado Não Encontrado!</string>
    <string name="produto">Produto</string>
    <string name="produton">Produto Não Encontrado!</string>
    <string name="prateleira">Prateleira: </string>
    <string name="corredor">Corredor: </string>
    <string name="empresa">Empresa</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="title_activity_teste">Teste</string>
    <string name="Moeda">R$</string>
    <string name="Quantidade">Quantidade</string>
</resources>
